cmake_minimum_required(VERSION 2.6)

SET(TARGET omxrtmpsrc)

SET(TARGET_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")

SET(CXX_FLAGS "${COMMON_COMPILE_FLAGS}")
  
SET(SOURCES
  library_entry_point.cc
  omx_rtmpsrc_component.cc
  )

ADD_LIBRARY(${TARGET} STATIC ${SOURCES})

FOREACH(F ${SOURCES})
  IF(F MATCHES ".+\\.cpp$" OR F MATCHES ".+\\.cc$")
    SET_SOURCE_FILES_PROPERTIES(${F} PROPERTIES COMPILE_FLAGS "${CXX_FLAGS}")
  ELSE()
    MESSAGE(FATAL_ERROR "\"${F}\" not a cpp file")
  ENDIF()
ENDFOREACH()

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE
  ${COMMON_INCLUDES}
  )

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPILE_DEFINITIONS}")

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINK_FLAGS "${COMMON_LINK_FLAGS}")
