cmake_minimum_required(VERSION 2.6)

SET(TARGET omxrtmpsrc)

SET(SOURCES
  library_entry_point.cc
  omx_rtmpsrc_component.cc
  )

SET_SOURCE_FILES_PROPERTIES(${SOURCES} PROPERTIES COMPILE_FLAGS "${COMMON_COMPONENT_COMPILE_FLAGS}")

ADD_LIBRARY(${TARGET} STATIC ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE
  ${COMMON_COMPONENT_INCLUDES}
  )

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPONENT_COMPILE_DEFINITIONS}")

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINK_FLAGS "${COMMON_COMPONENT_LINK_FLAGS}")
