cmake_minimum_required(VERSION 2.6)

SET(TARGET omxrtmpsrc)
SET(TARGET_DYN omxrtmpsrc_dynamic)

SET(SOURCES
  library_entry_point.cc
  omx_rtmpsrc_component.cc
  )

SET_SOURCE_FILES_PROPERTIES(${SOURCES} PROPERTIES COMPILE_FLAGS "${COMMON_COMPONENT_COMPILE_FLAGS}")

ADD_LIBRARY(${TARGET} STATIC ${SOURCES})
ADD_LIBRARY(${TARGET_DYN} SHARED ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE
  ${COMMON_COMPONENT_INCLUDES}
  )
TARGET_INCLUDE_DIRECTORIES(${TARGET_DYN} PRIVATE
  ${COMMON_COMPONENT_INCLUDES}
  )

SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES OUTPUT_NAME ${TARGET})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPONENT_COMPILE_DEFINITIONS}")
SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPONENT_COMPILE_DEFINITIONS}")

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINK_FLAGS "${COMMON_COMPONENT_LINK_FLAGS}")
SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES LINK_FLAGS "-L${CONTRIB_LIBRARY} -lomxil-bellagio ${COMMON_COMPONENT_LINK_FLAGS}")
