cmake_minimum_required(VERSION 2.6)

SET(TARGET omxrtmpout)
SET(TARGET_DYN omxrtmpout_dynamic)

SET(SOURCES
  library_entry_point.cc
  omx_rtmpout_component.cc
  )

SET_SOURCE_FILES_PROPERTIES(${SOURCES} PROPERTIES COMPILE_FLAGS "${COMMON_COMPONENT_COMPILE_FLAGS}")

ADD_LIBRARY(${TARGET} STATIC ${SOURCES})
ADD_LIBRARY(${TARGET_DYN} SHARED ${SOURCES})
ADD_DEPENDENCIES(${TARGET_DYN} xutil)
TARGET_LINK_LIBRARIES(${TARGET_DYN} ${WEBRTC_OUT}/libwebrtc_common.a ${WEBRTC_OUT}/librtc_base.a ${WEBRTC_OUT}/librtc_base_approved.a ${WEBRTC_OUT}/libcrssl.a -L${CONTRIB_LIBRARY} -lomxil-bellagio $ENV{TARGET_OUT}/libxutil.a ${CONTRIB_LIBRARY}/librtmp.a ${CONTRIB_LIBRARY}/libssl.a ${CONTRIB_LIBRARY}/libcrypto.a ${CONTRIB_LIBRARY}/libz.a dl rt)

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE
  ${COMMON_COMPONENT_INCLUDES}
  )
TARGET_INCLUDE_DIRECTORIES(${TARGET_DYN} PRIVATE
  ${COMMON_COMPONENT_INCLUDES}
  )

SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES OUTPUT_NAME ${TARGET})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPONENT_COMPILE_DEFINITIONS}")
SET_TARGET_PROPERTIES(${TARGET_DYN} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPONENT_COMPILE_DEFINITIONS}")
