cmake_minimum_required(VERSION 2.6)

SET(WEBRTC_ROOT "$ENV{WEBRTC_ROOT}")
IF("${WEBRTC_ROOT}" STREQUAL "")
  MESSAGE(FATAL_ERROR "Env \"WEBRTC_ROOT\" not set.")
ENDIF()

SET(OUT ${PROJECT_BINARY_DIR}/out)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUT})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUT})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUT})

ADD_SUBDIRECTORY(testing)
ADD_SUBDIRECTORY(third_party)
ADD_SUBDIRECTORY(net/third_party/nss)
ADD_SUBDIRECTORY(webrtc)
ADD_SUBDIRECTORY(talk)
