cmake_minimum_required(VERSION 2.6)

SET(TARGET omxrtmpsrctest)

SET(SOURCES
  omxrtmpsrctest.cc
  )

SET_SOURCE_FILES_PROPERTIES(${SOURCES} PROPERTIES COMPILE_FLAGS "${COMMON_COMPONENT_COMPILE_FLAGS}")

ADD_EXECUTABLE(${TARGET} ${SOURCES})
TARGET_LINK_LIBRARIES(${TARGET} ${LIBOMXIL_BELLAGIO_STATIC_LIBRARY} ${COMMON_COMPONENT_LINK_FLAGS})

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE
  ${COMMON_COMPONENT_INCLUDES}
  )

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_DEFINITIONS "${COMMON_COMPONENT_COMPILE_DEFINITIONS}")
